@@ -23,6 +23,7 @@ import scalabindings._
 import drm._
 import RLikeOps._
 import RLikeDrmOps._
+import org.apache.mahout.sparkbindings._
 import org.scalatest.FunSuite
 import org.apache.mahout.sparkbindings.test.MahoutLocalContext
 
@@ -89,6 +90,29 @@ class DrmLikeOpsSuite extends FunSuite with MahoutLocalContext {
     // Assert they are the same
     (inCoreB - inCoreBControl).norm should be < 1E-10
 
+  }
+
+  test("exact, min and auto ||") {
+    val inCoreA = dense((1, 2, 3), (2, 3, 4), (3, 4, 5), (4, 5, 6))
+    val A = drmParallelize(m = inCoreA, numPartitions = 2)
+
+    A.rdd.partitions.size should equal(2)
+
+    (A + 1.0).par(exact = 4).rdd.partitions.size should equal(4)
+    A.par(exact = 2).rdd.partitions.size should equal(2)
+    A.par(exact = 1).rdd.partitions.size should equal(1)
+    A.par(exact = 0).rdd.partitions.size should equal(2) // No effect for par <= 0
+    A.par(min = 4).rdd.partitions.size should equal(4)
+    A.par(min = 2).rdd.partitions.size should equal(2)
+    A.par(min = 1).rdd.partitions.size should equal(2)
+    A.par(auto = true).rdd.partitions.size should equal(10)
+    A.par(exact = 10).par(auto = true).rdd.partitions.size should equal(10)
+    A.par(exact = 11).par(auto = true).rdd.partitions.size should equal(19)
+    A.par(exact = 20).par(auto = true).rdd.partitions.size should equal(20)
+
+    intercept[AssertionError] {
+      A.par()
+    }
   }
 
 }
