@@ -2,7 +2,9 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
-  MAHOUT-1580 Optimize getNumNonZeroElements() (ssc)
+  MAHOUT-1573: More explicit parallelism adjustments in math-scala DRM apis; elements of automatic parallelism management (dlyubimov)
+
+  MAHOUT-1580: Optimize getNumNonZeroElements() (ssc)
   
   MAHOUT-1464: Cooccurrence Analysis on Spark (pat)
 
